[package]
name = "docu_flow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.59", features = ["derive"]}
axum = { version = "0.8.8", features = ["json"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"]}